# claude-tools

./: .gitmodules
supervisor-claw/: .env.example  .gitignore  README.md  pyproject.toml  schools.yaml
supervisor-claw/docs/: ADAPTER_AGENT_TEMPLATE.md  EXPORT_SCHEMA_v1.md  PLAN_v0.3.md  PLAN_v0.4.md  email_backfill_infra.md
supervisor-claw/docs/plans/: email_backfill_5x4.md
supervisor-claw/docs/prompts/: README.md  README_v0.4.md  launch_bit.md  launch_buaa.md  launch_fudan.md  launch_hust.md  launch_nankai.md  launch_nju.md  launch_nudt.md  launch_nwpu.md  launch_pku.md  launch_seu.md  launch_shtech.md  launch_sjtu.md  launch_sysu.md  launch_tju.md  launch_uestc.md  launch_ustc.md  launch_xidian.md  launch_xjtu.md  launch_zju.md
supervisor-claw/docs/reports/: bit_report.md  buaa_report.md  email_backfill_hust.md  email_backfill_nudt.md  email_backfill_nwpu.md  email_backfill_xidian.md  email_backfill_xjtu.md  enrich_v0.3_report.md  fudan_report.md  hust_report.md  nankai_report.md  nju_report.md  nudt_report.md  nwpu_report.md  pku_report.md  pku_ss_addon_report.md  seu_report.md  shtech_report.md  sjtu_cse_addon_report.md  sjtu_report.md  sysu_report.md  tju_report.md  uestc_report.md  ustc_report.md  xidian_report.md  xjtu_report.md  zju_report.md
supervisor-claw/src/claw/: __init__.py  config.py
supervisor-claw/tests/: conftest.py  test_export_sqlite.py  test_storage.py
supervisor-claw/tests/test_email_backfill/: test_decoders.py  test_hust_decoder.py  test_nudt_email.py  test_nwpu_email.py  test_update_email_only.py  test_xidian_decoder.py  (+1 more)
(+255 files in other folders)
