[project]
name = "supervisor-claw"
version = "0.1.0"
description = "Local crawler for CS/AI advisor info at top Chinese universities"
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "MIT" }
dependencies = [
    "httpx[http2]>=0.27",
    "selectolax>=0.3.21",
    "sqlmodel>=0.0.22",
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    "typer>=0.12",
    "rich>=13.7",
    "tenacity>=9.0",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "openai>=1.40",
    "playwright>=1.46",
    "anyio>=4.4",
    "textual>=0.80",
]

[project.scripts]
claw = "claw.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/claw"]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
    "mypy>=1.11",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
